--- a/src/App.css
+++ b/src/App.css
@@ -216,3 +216,13 @@ button:hover {
   transform: scale(0.97);
   box-shadow: 0 3px 8px rgba(0, 0, 0, 0.2);
 }
+
+@media (max-width: 576px) {
+  .form-check-label {
+    font-size: 1rem;
+  }
+
+  .form-check-input {
+    margin-top: 0.2rem;
+  }
+}
